--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     color: var(--ink);
     background: var(--bg-light);
     position: relative;
-    overflow: hidden;
+    overflow: hidden; /* sin scroll global; cada bloque tiene su propio scroll */
   }
   #sakuraCanvas{
     position: fixed; inset: 0;
@@ -34,15 +34,18 @@
   h1 { color: var(--accent-1); text-shadow: 0 2px 0 #fff; }
   h2 { color: var(--accent-2); }
   h3 { color: var(--accent-1); }
+
   .screen { display: none; position: relative; z-index: 1; }
+
   #start-screen, #mode-screen {
     display: flex; align-items: center; justify-content: center;
     height: 100vh; width: 100vw; padding: 16px;
   }
-  #game-screen, #results, #stats-screen {
+  #game-screen, #results-screen {
     height: 100vh; width: 100vw; padding: 10px 12px;
     display:flex; flex-direction: column; align-items: center;
   }
+
   .start-card{
     width: 92%; max-width: 420px;
     background: var(--card-bg);
@@ -73,6 +76,8 @@
   .meh    { background: linear-gradient(180deg, var(--meh) 0%, #7343d8 100%); }
   .reject { background: linear-gradient(180deg, var(--no) 0%, #ff5f93 100%); }
   .stats-btn { background: linear-gradient(180deg, var(--accent-1) 0%, var(--accent-2) 100%); color: #fff; }
+
+  /* Pantalla de modo dividida en 2 botones */
   .mode-split{
     position: relative; width: 100vw; height: 100vh;
     display: grid; grid-template-columns: 1fr 1fr;
@@ -80,11 +85,79 @@
   .mode-half{
     display:flex; align-items:center; justify-content:center;
     flex-direction:column; gap: 10px; cursor: pointer; padding: 20px;
-    transition: transform .15s ease;
+    transition: transform .15s ease; color:#fff; text-shadow:0 1px 2px rgba(0,0,0,.25);
   }
   .mode-half:hover{ transform: scale(1.01); }
   .mode-title{ font-size: clamp(26px, 4vw, 40px); font-weight: 800; text-align: center; }
-  .mode-desc{ font-size: clamp(14px, 2vw, 18px); opacity: .9; text-align: center; max-width: 580px; }
+  .mode-desc{ font-size: clamp(14px, 2vw, 18px); opacity: .95; text-align: center; max-width: 580px; }
+
+  /* Tarjeta de juego */
+  .card{
+    width: min(88vw, 380px);
+    height: min(70vh, 520px);
+    border-radius: 18px;
+    background: var(--card-bg);
+    border: 2px solid var(--accent-1);
+    box-shadow: 0 14px 28px rgba(0,0,0,.15);
+    overflow: hidden;
+    position: relative;
+    touch-action: none;
+  }
+  .card img{
+    width:100%; height:100%; object-fit: cover;
+    display:block; filter: saturate(1.05);
+  }
+  .card-name{
+    position:absolute; left:10px; right:10px; bottom:10px;
+    background: rgba(255,255,255,.86);
+    padding: 8px 12px;
+    border-radius: 12px;
+    font-weight: 700;
+    border: 1px solid var(--accent-1);
+    text-align: center;
+  }
+
+  /* Resultados: 2x2 con scroll interno en cada bloque */
+  .results-grid{
+    flex:1;
+    width: 100%;
+    max-width: 1200px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+    min-height: 0; /* permite que los hijos usen overflow */
+  }
+  .card-block{
+    background: var(--card-bg);
+    border: 2px solid var(--accent-1);
+    border-radius: 16px;
+    padding: 10px;
+    display:flex; flex-direction: column;
+    min-height: 0; /* para que inner-scroll funcione */
+    box-shadow: 0 10px 24px rgba(0,0,0,.12);
+  }
+  .block-title{ margin:4px 0 8px; font-size: 18px; }
+  .inner-scroll{
+    flex:1; overflow:auto; border-radius: 10px; background: #fff;
+    padding: 6px;
+  }
+  .x-scroll{ overflow-x: auto; overflow-y: hidden; }
+
+  /* Tablas compactas con tipografía pequeña y scroll interno */
+  table { border-collapse: collapse; width: 100%; }
+  .compact-table th, .compact-table td{
+    border-bottom: 1px solid #eee;
+    padding: 6px 8px;
+    font-size: 13px;
+    text-align: left;
+    vertical-align: top;
+  }
+  .compact-table thead th{ position: sticky; top:0; background:#fff; z-index:1; }
+  .smaller-cards{ font-size: 12px; line-height: 1.3; }
+  .wide-table { table-layout: fixed; }
+  .wide-table th:first-child, .wide-table td:first-child { width: 56%; } /* más ancha para “Top tarjetas” */
+  .wide-table th, .wide-table td { font-size: 12px; } /* un poco más pequeño para que quepa todo */
 </style>
 </head>
 <body>
@@ -104,11 +177,11 @@
 <!-- Pantalla de selección de modo -->
 <div id="mode-screen" class="screen">
   <div class="mode-split">
-    <div class="mode-half" id="shortMode" style="background:var(--yes);" onclick="startGame('short')">
+    <div class="mode-half" id="shortMode" onclick="startGame('short')">
       <div class="mode-title">Versión corta</div>
       <div class="mode-desc">Menos tarjetas, partida rápida.</div>
     </div>
-    <div class="mode-half" id="longMode" style="background:var(--meh);" onclick="startGame('long')">
+    <div class="mode-half" id="longMode" onclick="startGame('long')">
       <div class="mode-title">Versión larga</div>
       <div class="mode-desc">Más tarjetas para un juego completo.</div>
     </div>
@@ -127,6 +200,7 @@
     <button class="btn accept" onclick="handleChoice('yes')">Aquí sí</button>
   </div>
 </div>
+
 <!-- Pantalla de resultados -->
 <div id="results-screen" class="screen">
   <h2 id="resultsTitle">Resultados</h2>
@@ -185,6 +259,7 @@
     <button class="btn stats-btn" onclick="goToStart()">Volver al inicio</button>
   </div>
 </div>
+
 <script>
 /* =========================
    CONFIG & CONSTANTES
@@ -225,7 +300,7 @@ const BASE_CARDS = [
 const $ = (sel) => document.querySelector(sel);
 const shuffle = (arr) => arr.slice().sort(()=>Math.random()-0.5);
 function nowStr(){ return new Date().toLocaleString(); }
-<script>
+
 /* =========================
    TEMA ALEATORIO + PÉTALOS
 ========================= */
@@ -256,6 +331,12 @@ function applyThemeRandom() {
   r.setProperty("--yes", pick(BUTTON_FAMILIES.yes));
   r.setProperty("--meh", pick(BUTTON_FAMILIES.meh));
   r.setProperty("--no" , pick(BUTTON_FAMILIES.no));
+
+  // Colores de los dos botones de modo
+  const short = document.getElementById("shortMode");
+  const long  = document.getElementById("longMode");
+  if(short) short.style.background = r.getPropertyValue("--yes");
+  if(long)  long.style.background  = r.getPropertyValue("--meh");
 
   setPetalColorFromHex(t.mid);
 }
@@ -305,12 +386,12 @@ function sakuraLoop(){
   }
   draw();
 }
-<script>
+
 /* =========================
    COLORES DE JUGADORES (ÚNICOS)
 ========================= */
 const PLAYER_COLOR_POOL = [
-  "#8a5adf","#6f4bd4","#a27af0","#9a6af0",
+  "#8a5adf","#6f4bd4","#a27af0","#9a6f0",
   "#ff7aa3","#ff6b9b","#ff85b1",
   "#20b2aa","#2aa79b","#1fa8a0",
   "#e0c050","#d6b140",
@@ -341,7 +422,7 @@ function getPlayerColorDeterministic(name){
       playerColorMap.set(key, cand); return cand;
     }
   }
-  const fallback = `hsl(${(Math.abs(hash)%180)+160} 70% 45%)`;
+  const fallback = `hsl(${(Math.abs(hash)%180)+160} 70% 45%)`; // azules verdosos si hace falta
   playerColorMap.set(key, fallback); return fallback;
 }
 
@@ -361,6 +442,10 @@ function showScreen(id){
   document.getElementById(id).style.display="flex";
 }
 
+function goToStart(){
+  showScreen("start-screen");
+}
+
 function goToModeScreen(){
   const name = (document.getElementById("playerName").value||"").trim();
   if(!name){ alert("¡Pon tu nombre!"); return; }
@@ -368,7 +453,7 @@ function goToModeScreen(){
   $("#playerLabel") && ($("#playerLabel").textContent = `Jugador: ${playerName}`);
   showScreen("mode-screen");
 }
-<script>
+
 /* =========================
    JUEGO
 ========================= */
@@ -457,7 +542,7 @@ async function endGame(){
 
   renderStats();
 }
-<script>
+
 /* =========================
    ESTADÍSTICAS + GRÁFICO
 ========================= */
@@ -548,7 +633,7 @@ async function renderStats(){
 
   const players = Object.keys(byPlayer).sort((a,b)=>a.localeCompare(b));
 
-  // Global
+  // Global (parejas)
   const pairs = [];
   for(let i=0;i<players.length;i++){
     for(let j=i+1;j<players.length;j++){
@@ -599,3 +684,5 @@ applyThemeRandom();
 sakuraLoop();
 showScreen("start-screen");
 </script>
+</body>
+</html>
